trying to add screenshot in README

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 the somewhat pretty result of me experimenting with pixel manipulation in SDL
-![](https://github.com/DinosaurBlanket/pixelTwiddling/raw/master/screenshot.png)
+![screenshot](https://github.com/DinosaurBlanket/pixelTwiddling/raw/master/screenshot.png)
